@@ -33,6 +33,8 @@ Bug Fixes
 - Renamed some source files to avoid problems on case insensitive platforms.
 - Entering a count for the . (repeat) command sometimes results in an internal
   error.
+- Repeating an R command resulted in the text being inserted instead of
+  overwriting old text. This now works properly.
 
 0.3.0 to 0.3.1
 
